--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </thead>
       </table>
     </div>
-    <div style="text-align: center;">
+    <div id="charts-container" style="text-align: center;">
       <canvas id="updating-chart" width="500" height="300"></canvas>
   </body>
       <script src="js/charts-handler.js"></script>
