dinamic canvas creation

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   </head>
   
   <body>
-    <h1>TEST</h1>
+    <div class="titlediv" style="text-align:center;">
+      <h1>SERVER ROOM TEMPERATURE SENSORS</h1>
+    </div>
     <div class="container">
       <table class="table" id="temps">
         <thead>
@@ -21,8 +23,8 @@
         </thead>
       </table>
     </div>
-    <div id="charts-container" style="text-align: center;">
-      <canvas id="updating-chart" width="500" height="300"></canvas>
+    <div id="charts-container" style="text-align: center;"> 
+     <!-- <canvas id="updating-chart" width="500" height="300"></canvas> -->
   </body>
-      <script src="js/charts-handler.js"></script>
+     <!--  <script src="js/charts-handler.js"></script> -->
 </html>
